--- a/index.html
+++ b/index.html
@@ -5,22 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
-<header>
-  <nav>
-
+<header class="px-14 lg:px-32">
+  <nav class="lg:pt-8">
+    <div class="navbar">
+      <div class="navbar-start">
+        <div class="dropdown flex justify-between items-center">
+          <div tabindex="0" role="button" class="btn btn-ghost hover:bg-[#1DD100] lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+          </div>
+          <ul tabindex="0" class="menu menu-sm dropdown-content mt-40  z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+            <li><a>Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Destination</a></li>
+            <li><a>Search</a></li>
+          </ul>
+        </div>
+        <a class="font-raleway font-extrabold lg:text-4xl">P-Ticket</a>
+      </div>
+      <div class="navbar-center hidden lg:flex">
+        <ul class="menu  menu-horizontal px-1">
+          <li><a class="hover:bg-transparent font-raleway font-medium text-[18px] text-[#030712a8]">Home</a></li>
+            <li><a class="hover:bg-transparent font-raleway font-medium text-[18px] text-[#030712a8]">About</a></li>
+            <li><a class="hover:bg-transparent font-raleway font-medium text-[18px] text-[#030712a8]">Destination</a></li>
+            <li><a class="hover:bg-transparent font-raleway font-medium text-[18px] text-[#030712a8]">Search</a></li>
+        </ul>
+      </div>
+      <div class="navbar-end">
+        <a class="btn px-6 py-4 bg-[#1cd10019] text-[#1cd100] hover:bg-[#1cd10019] flex items-center">Button <i class="fa-solid fa-van-shuttle"></i></a>
+      </div>
+    </div>
   </nav>
+  <!----------------------------Banner Section Start--------------------- -->
 </header>
 <main>
-  
 </main>
 
 <footer>
-  
+
 </footer>
 </body>
 
