--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>P-Ticket</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -82,6 +82,43 @@
   </div>
 </header>
 <main>
+  <!----------------Offer Section--------------------->
+  <section class="px-10 lg:px-32 text-center mb-12 lg:mb-28">
+    <h2 class="text-[#030712] text-[40px] font-raleway font-bold text-center mb-12">Best offers for you</h2>
+    <div class="lg:flex gap-3 lg:gap-6">
+      <!------------------Coupon item------------------>
+      <div class="bg-[#FFBF0F] rounded-xl p-9 lg:p-14 flex gap-20 items-center relative mb-16">
+        <div>
+          <h3 class="text-[#030712db] text-4xl font-inter font-black ">15% OFF</h3>
+          <h4 class="text-[#030712db] text-xl font-semibold font-inter ">on your next purchase</h4>
+          <p class="text-[#0307129d] text-[18px] font-medium font-inter ">use by January 2024</p>
+        </div>
+        <div>
+          <h2 class="text-3xl text-[#030712] font-raleway font-bold">NEW15</h2>
+          <p class="text-[#0307129d] text-[18px] font-medium font-inter ">coupon code</p>
+        </div>
+        <div class="absolute right-48">
+          <img src="images/cupon-devider.png" alt="">
+        </div>
+      </div>
+      <!------------------Coupon item------------------>
+      <div class="bg-[#F78C9C] rounded-xl p-9 lg:p-14 flex gap-20 items-center relative mb-16">
+        <div>
+          <h3 class="text-[#030712db] text-4xl font-inter font-black ">20% OFF</h3>
+          <h4 class="text-[#030712db] text-xl font-semibold font-inter ">on your next purchase</h4>
+          <p class="text-[#0307129d] text-[18px] font-medium font-inter ">use by January 2024</p>
+        </div>
+        <div>
+          <h2 class="text-2xl text-[#030712] font-raleway font-bold">Couple 20</h2>
+          <p class="text-[#0307129d] text-[18px] font-medium font-inter ">coupon code</p>
+        </div>
+        <div class="absolute right-48">
+          <img src="images/cupon-devider.png" alt="">
+        </div>
+      </div>
+    </div>
+    <a href="#_" class="rounded-md px-6 py-2 cursor-pointer border-2 text-xl font-bold border-[#1cd10060] text-[#1DD100] ">See All Offers</a>
+  </section>
 </main>
 
 <footer>
