--- a/index.html
+++ b/index.html
@@ -119,6 +119,58 @@
     </div>
     <a href="#_" class="rounded-md px-6 py-2 cursor-pointer border-2 text-xl font-bold border-[#1cd10060] text-[#1DD100] ">See All Offers</a>
   </section>
+  <!----------------------Ticket counter---------------------->
+  <div id="ticket-counter-container" class="bg-[#F7F8F8] text-center pb-5">
+    <h2 class="font-raleway font-bold text-[40px] text-[#030712] pt-28" >P.H Paribahan</h2>
+    <p class="font-inter font-normal text-xl text-[#0307129d] w-3/5 mx-auto mb-12">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+    <!-------------------------Bus details------------------ -->
+    <div class="mx-10 lg:mx-32  bg-white flex items-center justify-between gap-4 rounded-2xl relative">
+      <div class="p-14">
+        <div class="flex justify-between">
+          <div class="flex items-center gap-3">
+            <div class="text-5xl">
+              <i class="fa-solid fa-van-shuttle"></i>
+            </div>
+            <div>
+              <h2 class="font-raleway font-bold text-3xl text-[#030712]">Greenline Paribahan</h2>
+              <p class="font-inter text-[18px] text-[#03071276] font-medium">Coach-009-WEB ! AC_Business</p>
+            </div>
+          </div>
+          <div class="bg-slate-200 p-4 rounded-xl text-[#1DD100] font-inter font-medium text-[18px] flex items-center gap-2">
+            <img src="images/seat-green.png" alt="">
+            <p><span>40</span> seats left</p>
+          </div>
+        </div>
+        <div class="bg-[#F7F8F8] p-8 rounded-xl space-y-2 mt-5">
+          <div class="flex justify-between border-b-2 border-dashed pb-2">
+            <h4 class="font-raleway font-semibold text-xl text-[#030712]">Route</h4>
+            <h4 class="font-raleway font-semibold text-xl text-[#030712]">Dhaka - Sylhet</h4>
+          </div>
+          <div class="flex justify-between border-b-2 border-dashed pb-2">
+            <h4 class="font-raleway font-semibold text-xl text-[#030712]">Departure Time</h4>
+            <h4 class="font-raleway font-semibold text-xl text-[#030712]">9:00 PM</h4>
+          </div>
+          <div class="flex gap-2">
+            <p class="font-raleway font-semibold text-xl text-[#030712] bg-[#0307120c] p-2 rounded-xl">Boarding Point - Laxmipur</p>
+            <p class="font-raleway font-semibold text-xl text-[#030712] bg-[#0307120c] p-2 rounded-xl">Dropping Point - Bogura</p>
+            <p class="font-raleway font-semibold text-xl text-[#030712] bg-[#0307120c] p-2 rounded-xl">Est. Time - 11 Hour</p>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col items-center pr-16">
+        <img src="images/fare.png" alt="">
+        <h4 class="font-raleway text-3xl font-bold text-[#030712]">550 Taka</h4>
+        <p class="font-raleway text-2xl font-semibold text-[#03071267]">Per Seat</p>
+      </div>
+      <div class="absolute right-44">
+        <img src="images/info-devider.png" alt="">
+      </div>
+    </div>
+    <!---------------------------Sit collection----------------- -->
+    <div>
+
+    </div>
+  </div>
 </main>
 
 <footer>
