footer section added

--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
     <a href="#_" class="rounded-md px-6 py-2 cursor-pointer border-2 text-xl font-bold border-[#1cd10060] text-[#1DD100] ">See All Offers</a>
   </section>
   <!----------------------Ticket counter---------------------->
-  <div id="ticket-counter-container" class="bg-[#F7F8F8] text-center pb-5">
+  <div id="ticket-counter-container" class="bg-[#F7F8F8] text-center lg:pb-28 pb-5">
     <h2 class="font-raleway font-bold text-[40px] text-[#030712] pt-28" >P.H Paribahan</h2>
     <p class="font-inter font-normal text-xl text-[#0307129d] w-3/5 mx-auto mb-12">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
     <!-------------------------Bus details------------------ -->
-    <div class="mx-10 lg:mx-32  bg-white flex items-center justify-between gap-4 rounded-2xl relative">
+    <div class="mx-10 lg:mx-32 bg-white flex items-center justify-between gap-4 rounded-2xl relative">
       <div class="p-14">
         <div class="flex justify-between">
           <div class="flex items-center gap-3">
@@ -358,8 +358,33 @@
   </div>
 </main>
 
-<footer>
-
+<footer class="px-10 lg:px-32 bg-black py-24">
+  <div class="flex items-center justify-between border-dashed border-b-2 ">
+    <div class="pb-20">
+      <h2 class="font-raleway font-extrabold text-4xl text-white">P-Ticket</h2>
+      <p class="font-inter font-medium text-[18px] text-[#ffffffca] max-w-80 mt-4">P-Ticket is a digital platform to make your daily commuting better.</p>
+    </div>
+    <div class=" space-y-4">
+      <h2 class="font-raleway font-extrabold text-2xl text-white">Download Our App</h2>
+      <div class="border-2 flex items-center p-1 rounded-md ">
+        <img src="images/playstore.png" alt="">
+        <div class="font-inter text-white font-bold">
+          <h4 class="text-xl">Get it on</h4>
+          <h3  class="text-3xl">Google Play</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mt-12 flex justify-between">
+    <div class="font-inter text-[18px] text-[#ffffffca]">@all rights reserved, P-Ticket services limited.2024</div>
+    <div>
+      <ul class="flex gap-5 font-inter *:text-[18px] *:text-[#ffffffca]">
+        <li>Terms & condition</li>
+        <li>Return & refund policy</li>
+        <li>Privacy policy</li>
+      </ul>
+    </div>
+  </div>
 </footer>
 </body>
 
