--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<header class="px-10 lg:px-32">
+<header class="px-6 lg:px-32">
   <nav class="lg:pt-8">
     <div class="navbar">
       <div class="navbar-start flex justify-between items-center lg:justify-normal">
@@ -19,7 +19,7 @@
           <div tabindex="0" role="button" class="btn btn-ghost hover:bg-[#1DD100] lg:hidden">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
           </div>
-          <ul tabindex="0" class="menu menu-sm dropdown-content mt-40  z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+          <ul tabindex="0" class="menu menu-sm dropdown-content  z-[1] p-2 shadow bg-base-100 rounded-box w-52">
             <li><a>Home</a></li>
             <li><a>About</a></li>
             <li><a>Destination</a></li>
@@ -37,7 +37,7 @@
         </ul>
       </div>
       <div class="navbar-end">
-        <a class="btn px-6 py-4 bg-[#1cd10019] text-[#1cd100] hover:bg-[#1cd10019] flex items-center">Button <i class="fa-solid fa-van-shuttle"></i></a>
+        <a class="btn px-6 py-4 bg-[#1cd10019] text-[#1cd100] hover:bg-[#1cd10019] flex items-center">Bus <i class="fa-solid fa-van-shuttle"></i></a>
       </div>
     </div>
   </nav>
@@ -45,7 +45,7 @@
   <section id="banner" style="background-image: url(./images/banner.png); background-repeat: no-repeat; background-size: cover; background-position: center;" class="rounded-3xl mt-4 w-full py-8 lg:h-[480px] flex flex-col justify-center items-center">
     <h1 class="font-raleway text-4xl lg:text-6xl font-extrabold lg:leading-[80px] text-white text-center">End-to-End Travel with <br><span class="text-[#1DD100]">P Paribahan</span></h1>
     <p class="font-inter text-white text-[18px] w-full lg:w-[600px] text-center">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
-    <button class="btn bg-[#1DD100] text-black font-bold text-xl border-none mt-8 hover:bg-[#1DD100]">Buy Ticket</button>
+    <a href="#ticket-counter-container" class="btn bg-[#1DD100] text-black font-bold text-xl border-none mt-8 hover:bg-[#1DD100]">Buy Ticket</a>
   </section>
   <!---------------------Banner Counter---------------- -->
   <div class="flex justify-center gap-3 lg:gap-6 lg:relative lg:-mt-16 mt-7 mb-28">
@@ -83,11 +83,11 @@
 </header>
 <main>
   <!----------------Offer Section--------------------->
-  <section class="px-10 lg:px-32 text-center mb-12 lg:mb-28">
+  <section class="px-6 lg:px-32 text-center mb-12 lg:mb-28">
     <h2 class="text-[#030712] text-[40px] font-raleway font-bold text-center mb-12">Best offers for you</h2>
     <div class="lg:flex gap-3 lg:gap-6">
       <!------------------Coupon item------------------>
-      <div class="bg-[#FFBF0F] rounded-xl p-9 lg:p-14 flex gap-20 items-center relative mb-16">
+      <div class="bg-[#FFBF0F] rounded-xl p-10 lg:p-14 flex gap-5 lg:gap-20 items-center relative mb-16">
         <div>
           <h3 class="text-[#030712db] text-4xl font-inter font-black ">15% OFF</h3>
           <h4 class="text-[#030712db] text-xl font-semibold font-inter ">on your next purchase</h4>
@@ -97,12 +97,12 @@
           <h2 class="text-3xl text-[#030712] font-raleway font-bold">NEW15</h2>
           <p class="text-[#0307129d] text-[18px] font-medium font-inter ">coupon code</p>
         </div>
-        <div class="absolute right-48">
+        <div class=" absolute right-40 lg:right-48">
           <img src="images/cupon-devider.png" alt="">
         </div>
       </div>
       <!------------------Coupon item------------------>
-      <div class="bg-[#F78C9C] rounded-xl p-9 lg:p-14 flex gap-20 items-center relative mb-16">
+      <div class="bg-[#F78C9C] rounded-xl p-10 lg:p-14 flex gap-5 lg:gap-20 items-center relative mb-16">
         <div>
           <h3 class="text-[#030712db] text-4xl font-inter font-black ">20% OFF</h3>
           <h4 class="text-[#030712db] text-xl font-semibold font-inter ">on your next purchase</h4>
@@ -112,7 +112,7 @@
           <h2 class="text-2xl text-[#030712] font-raleway font-bold">Couple 20</h2>
           <p class="text-[#0307129d] text-[18px] font-medium font-inter ">coupon code</p>
         </div>
-        <div class="absolute right-48">
+        <div class="absolute right-40 lg:right-48">
           <img src="images/cupon-devider.png" alt="">
         </div>
       </div>
@@ -321,9 +321,9 @@
             <h2 class="font-raleway font-bold text-black">1100</h2>
           </div>
           <!-------------------Coupon Input---------------- -->
-          <div id="coupon-input" class="bg-white rounded-2xl p-2 flex justify-between items-center mt-4">
+          <div id="coupon-input" class="bg-white rounded-2xl p-2 w-full flex justify-between items-center mt-4">
             <input type="text" placeholder="Have any coupon?" class="outline-none py-3 pl-3">
-            <button class="px-6 py-3 bg-[#1DD100] rounded-2xl text-white font-raleway font-bold">Apply</button>
+            <button class="px-1 lg:px-6 py-3 bg-[#1DD100] rounded-2xl text-white font-raleway font-bold">Apply</button>
           </div>
           <!---------------------Grand Total DIV------------------ -->
           <div class="flex justify-between mt-5">
